test/compile_errors/err_break_label_value.w
//! expect-check-fail: break with a value is not supported

fn main:
    'outer while true:
        break 'outer 1
